# SnakeCharlie

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh-CN.md
config/: SnakeCharlie.json  appConfig.json
include/: AppConfig.h  AppRunMode.h  BlockModel.h  Entity.h  EntityLayer.h  EntityManager.h  FPSTimer.h  InfoboardModel.h  PlayboardModel.h  SnakeApp.h  SnakeBrain.h  SnakeDirection.h  SnakeModel.h  SnakeState.h  TextLabel.h  TexturedRectangle.h  TrainApp.h  UIManager.h  Utility.h
include/NeuralNetwork/: Activate.h  Layer.h  Matrix.h  NeuralNetwork.h  Neuron.h  Utils.h
include/Observer/: Observer.h
include/Thread/: ThreadPool.h
src/: AppConfig.cpp  AppRunMode.cpp  BlockModel.cpp  Entity.cpp  EntityManager.cpp  FPSTimer.cpp  InfoboardModel.cpp  PlayboardModel.cpp  SnakeApp.cpp  SnakeBrain.cpp  SnakeDirection.cpp  SnakeModel.cpp  SnakeState.cpp  TextLabel.cpp  TexturedRectangle.cpp  TrainApp.cpp  UIManager.cpp  Utility.cpp  main.cpp
src/NeuralNetwork/: Activate.cpp  Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  Utils.cpp
src/Thread/: ThreadPool.cpp
